--- a/anphys/engine/engine.vcxproj.filters
+++ b/anphys/engine/engine.vcxproj.filters
@@ -151,12 +151,6 @@
     <Filter Include="spec_render\render_d3d8\objects\2d">
       <UniqueIdentifier>{3cb0506c-cde7-4640-a204-d85a70a3e12b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="render\2d_render">
-      <UniqueIdentifier>{41a0f829-8dc6-4471-8bdb-a6e8b73b530f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="spec_render\render_d3d8\2d_render">
-      <UniqueIdentifier>{e927ecbd-8051-4c83-9573-7b2d54e9d643}</UniqueIdentifier>
-    </Filter>
     <Filter Include="util\image">
       <UniqueIdentifier>{c472deb9-21fb-4d06-bc0b-98049b78476a}</UniqueIdentifier>
     </Filter>
@@ -272,9 +266,6 @@
     </ClInclude>
     <ClInclude Include="..\src\util\script\config_reader.h">
       <Filter>util\script</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\util\other\data_object.h">
-      <Filter>util\other</Filter>
     </ClInclude>
     <ClInclude Include="..\src\util\script\string_parser.h">
       <Filter>util\script</Filter>
@@ -399,15 +390,6 @@
     <ClInclude Include="..\src\physics\stuff\inertia.h">
       <Filter>physics\stuff</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\render\camera\camera.h">
-      <Filter>render\camera</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\render\camera\camera_3d_mouse.h">
-      <Filter>render\camera</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\render\camera\cameras_manager.h">
-      <Filter>render\camera</Filter>
-    </ClInclude>
     <ClInclude Include="..\src\render\light_manager\light.h">
       <Filter>render\light_manager</Filter>
     </ClInclude>
@@ -522,20 +504,8 @@
     <ClInclude Include="..\src\spec_render\render_d3d8\objects\2d\render_2d_object_mesh_d3d8.h">
       <Filter>spec_render\render_d3d8\objects\2d</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\render\2d_render\render_2d_base_interface.h">
-      <Filter>render\2d_render</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\spec_render\render_d3d8\2d_render\render_2d_d3d8.h">
-      <Filter>spec_render\render_d3d8\2d_render</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\render\2d_render\render_2d.h">
-      <Filter>render\2d_render</Filter>
-    </ClInclude>
     <ClInclude Include="..\src\render\render_objects\2d\render_2d_object_mesh.h">
       <Filter>render\render_objects\2d</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\render\camera\camera_2d.h">
-      <Filter>render\camera</Filter>
     </ClInclude>
     <ClInclude Include="..\src\util\image\image.h">
       <Filter>util\image</Filter>
@@ -624,6 +594,27 @@
     <ClInclude Include="..\src\render\render_state\simple_3d_render_state_base_interface.h">
       <Filter>render\render_state</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\render\camera\camera_3d.h">
+      <Filter>render\camera</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\render\camera\camera_3d_mouse.h">
+      <Filter>render\camera</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\render\render_state\simple_3d_render_state.h">
+      <Filter>render\render_state</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\render\render_state\2d_render_state_base_interface.h">
+      <Filter>render\render_state</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\render\camera\camera_2d.h">
+      <Filter>render\camera</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\spec_render\render_d3d8\render_state\2d_render_state_d3d8.h">
+      <Filter>spec_render\render_d3d8\render_state</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\render\render_state\2d_render_state.h">
+      <Filter>render\render_state</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\util\math\ray.cpp">
@@ -652,9 +643,6 @@
     </ClCompile>
     <ClCompile Include="..\src\util\script\config_reader.cpp">
       <Filter>util\script</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\util\other\data_object.cpp">
-      <Filter>util\other</Filter>
     </ClCompile>
     <ClCompile Include="..\src\engine\engine_win.cpp">
       <Filter>engine</Filter>
@@ -749,12 +737,6 @@
     <ClCompile Include="..\src\physics\stuff\inertia.cpp">
       <Filter>physics\stuff</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\render\camera\camera_3d_mouse.cpp">
-      <Filter>render\camera</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\render\camera\cameras_manager.cpp">
-      <Filter>render\camera</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\render\light_manager\light_manager.cpp">
       <Filter>render\light_manager</Filter>
     </ClCompile>
@@ -788,9 +770,6 @@
     <ClCompile Include="..\src\spec_render\render_d3d8\render_d3d8.cpp">
       <Filter>spec_render\render_d3d8</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\spec_render\render_d3d8\camera\camera_3d_mouse_d3d8.cpp">
-      <Filter>spec_render\render_d3d8\camera</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\spec_render\render_d3d8\light\light_d3d8.cpp">
       <Filter>spec_render\render_d3d8\light</Filter>
     </ClCompile>
@@ -817,18 +796,6 @@
     </ClCompile>
     <ClCompile Include="..\src\spec_render\render_d3d8\objects\2d\render_2d_object_mesh_d3d8.cpp">
       <Filter>spec_render\render_d3d8\objects\2d</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\spec_render\render_d3d8\2d_render\render_2d_d3d8.cpp">
-      <Filter>spec_render\render_d3d8\2d_render</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\render\2d_render\render_2d_base_interface.cpp">
-      <Filter>render\2d_render</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\render\camera\camera.cpp">
-      <Filter>render\camera</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\render\camera\camera_2d.cpp">
-      <Filter>render\camera</Filter>
     </ClCompile>
     <ClCompile Include="..\src\util\image\image.cpp">
       <Filter>util\image</Filter>
@@ -952,6 +919,15 @@
     </ClCompile>
     <ClCompile Include="..\src\render\render_state\simple_3d_render_state_base_interface.cpp">
       <Filter>render\render_state</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\render\camera\camera_3d_mouse.cpp">
+      <Filter>render\camera</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\render\render_state\2d_render_state_base_interface.cpp">
+      <Filter>render\render_state</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\spec_render\render_d3d8\render_state\2d_render_state_d3d8.cpp">
+      <Filter>spec_render\render_d3d8\render_state</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
