--- a/trunk/anphys/engine/engine.vcxproj
+++ b/trunk/anphys/engine/engine.vcxproj
@@ -126,11 +126,8 @@
     <ClInclude Include="..\src\physics\solver\sequential_impulses_solver.h" />
     <ClInclude Include="..\src\physics\solver\solver_interface.h" />
     <ClInclude Include="..\src\physics\stuff\inertia.h" />
-    <ClInclude Include="..\src\render\2d_render\render_2d.h" />
-    <ClInclude Include="..\src\render\2d_render\render_2d_base_interface.h" />
-    <ClInclude Include="..\src\render\camera\camera.h" />
-    <ClInclude Include="..\src\render\camera\cameras_manager.h" />
     <ClInclude Include="..\src\render\camera\camera_2d.h" />
+    <ClInclude Include="..\src\render\camera\camera_3d.h" />
     <ClInclude Include="..\src\render\camera\camera_3d_mouse.h" />
     <ClInclude Include="..\src\render\light_manager\light.h" />
     <ClInclude Include="..\src\render\light_manager\light_base_interface.h" />
@@ -154,7 +151,10 @@
     <ClInclude Include="..\src\render\render_objects\object_manager.h" />
     <ClInclude Include="..\src\render\render_objects\object_manager_base_interface.h" />
     <ClInclude Include="..\src\render\render_objects\render_object.h" />
+    <ClInclude Include="..\src\render\render_state\2d_render_state.h" />
+    <ClInclude Include="..\src\render\render_state\2d_render_state_base_interface.h" />
     <ClInclude Include="..\src\render\render_state\render_state_interface.h" />
+    <ClInclude Include="..\src\render\render_state\simple_3d_render_state.h" />
     <ClInclude Include="..\src\render\render_state\simple_3d_render_state_base_interface.h" />
     <ClInclude Include="..\src\render\render_target\backbuffer_render_target.h" />
     <ClInclude Include="..\src\render\render_target\backbuffer_render_target_base_interface.h" />
@@ -169,7 +169,6 @@
     <ClInclude Include="..\src\render\texture_manager\texture.h" />
     <ClInclude Include="..\src\render\texture_manager\texture_base_interface.h" />
     <ClInclude Include="..\src\render\texture_manager\texture_manager.h" />
-    <ClInclude Include="..\src\spec_render\render_d3d8\2d_render\render_2d_d3d8.h" />
     <ClInclude Include="..\src\spec_render\render_d3d8\light\light_d3d8.h" />
     <ClInclude Include="..\src\spec_render\render_d3d8\material\material_d3d8.h" />
     <ClInclude Include="..\src\spec_render\render_d3d8\objects\2d\render_2d_object_mesh_d3d8.h" />
@@ -179,6 +178,7 @@
     <ClInclude Include="..\src\spec_render\render_d3d8\objects\object_manager_d3d8.h" />
     <ClInclude Include="..\src\spec_render\render_d3d8\objects\render_3d_object_d3d8.h" />
     <ClInclude Include="..\src\spec_render\render_d3d8\render_d3d8.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\render_state\2d_render_state_d3d8.h" />
     <ClInclude Include="..\src\spec_render\render_d3d8\render_state\simple_3d_render_state_d3d8.h" />
     <ClInclude Include="..\src\spec_render\render_d3d8\render_target\backbuffer_render_target_d3d8.h" />
     <ClInclude Include="..\src\spec_render\render_d3d8\render_target\texture_render_target_d3d8.h" />
@@ -188,7 +188,6 @@
     <ClInclude Include="..\src\util\file_system\file_base_interface.h" />
     <ClInclude Include="..\src\util\image\image.h" />
     <ClInclude Include="..\src\util\image\png_image_format.h" />
-    <ClInclude Include="..\src\util\other\data_object.h" />
     <ClInclude Include="..\src\util\other\precreated_vector.h" />
     <ClInclude Include="..\src\util\other\queue.h" />
     <ClInclude Include="..\src\util\other\singleton.h" />
@@ -287,10 +286,6 @@
     <ClCompile Include="..\src\physics\scenes\physics_scene.cpp" />
     <ClCompile Include="..\src\physics\solver\sequential_impulses_solver.cpp" />
     <ClCompile Include="..\src\physics\stuff\inertia.cpp" />
-    <ClCompile Include="..\src\render\2d_render\render_2d_base_interface.cpp" />
-    <ClCompile Include="..\src\render\camera\camera.cpp" />
-    <ClCompile Include="..\src\render\camera\cameras_manager.cpp" />
-    <ClCompile Include="..\src\render\camera\camera_2d.cpp" />
     <ClCompile Include="..\src\render\camera\camera_3d_mouse.cpp" />
     <ClCompile Include="..\src\render\light_manager\light_manager.cpp" />
     <ClCompile Include="..\src\render\material_manager\material_manager.cpp" />
@@ -300,6 +295,7 @@
     <ClCompile Include="..\src\render\render_objects\multi_object\multi_object.cpp" />
     <ClCompile Include="..\src\render\render_objects\object_manager_base_interface.cpp" />
     <ClCompile Include="..\src\render\render_objects\render_object.cpp" />
+    <ClCompile Include="..\src\render\render_state\2d_render_state_base_interface.cpp" />
     <ClCompile Include="..\src\render\render_state\simple_3d_render_state_base_interface.cpp" />
     <ClCompile Include="..\src\render\render_target\render_target_interface.cpp" />
     <ClCompile Include="..\src\render\scenes\scene_manager.cpp" />
@@ -307,8 +303,6 @@
     <ClCompile Include="..\src\render\surface\surface_material_base_interface.cpp" />
     <ClCompile Include="..\src\render\surface\surface_material_manager.cpp" />
     <ClCompile Include="..\src\render\texture_manager\texture_manager.cpp" />
-    <ClCompile Include="..\src\spec_render\render_d3d8\2d_render\render_2d_d3d8.cpp" />
-    <ClCompile Include="..\src\spec_render\render_d3d8\camera\camera_3d_mouse_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\light\light_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\material\material_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\objects\2d\render_2d_object_mesh_d3d8.cpp" />
@@ -316,6 +310,7 @@
     <ClCompile Include="..\src\spec_render\render_d3d8\objects\mesh\mesh_part_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\objects\mesh\render_3d_object_mesh_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\render_d3d8.cpp" />
+    <ClCompile Include="..\src\spec_render\render_d3d8\render_state\2d_render_state_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\render_state\simple_3d_render_state_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\render_target\backbuffer_render_target_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\render_target\texture_render_target_d3d8.cpp" />
@@ -326,7 +321,6 @@
     <ClCompile Include="..\src\util\image\image.cpp" />
     <ClCompile Include="..\src\util\image\png_image_format.cpp" />
     <ClCompile Include="..\src\util\math\ray.cpp" />
-    <ClCompile Include="..\src\util\other\data_object.cpp" />
     <ClCompile Include="..\src\util\other\string_utils.cpp" />
     <ClCompile Include="..\src\util\log\log_system.cpp" />
     <ClCompile Include="..\src\util\file_system\file_system.cpp" />
